--- a/index.html
+++ b/index.html
@@ -17,39 +17,22 @@
 <body>
     <div class="container-flow">
 <!-- Menú -->
-        <header>
 
-            <nav class="navbar navbar-expand-lg navbar-light " id="menu">
-                <div class="container-fluid">
+<header>
+  <img src="img/logo.png" id="logo">
+  </header>
+  <nav id="navbar">
+    <ul class="menu-list">
+      <li class="logo"></li>
+      <li><a href="#inicio">Inicio</a></li>
+      <li><a href="#preguntas">Preguntas</a></li>
+      <li><a href="#">Servicio</a></li>
+      <li><a href="#contacto">Contacto</a></li>
+      
+    </ul>
+  </nav>
 
-                    <img class="navbar-brand" id="logo" src="img/logo.png">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarNav">
-
-                        <div class="navbar-nav w-100 justify-content-center">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#preguntas">Preguntas Frecuentes</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Servicios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contacto">Contacto</a>
-                            </li>
-                        </div>
-
-                    </div>
-                </div>
-            </nav>
-
-
-        </header>
+       
 <!-- Inicio -->
 
         <main>
@@ -164,7 +147,17 @@
         </main>
 <!-- Footer -->
         <footer>
-            <div id="footer"></div>
+            <div id="footer">
+                <p>
+                    Av. 8 de Octubre 2355 / 603, 11800 Montevideo, Departamento de Montevideo
+                </p><br>
+                <p>
+                    2402 7973
+                </p><br>
+                <p>
+                    contacto@emsella.com.uy
+                </p>
+            </div>
 
 
         </footer>
