probando responsive tercero

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuResponsive">
-                    <a class="navbar-brand" href="#"><img src="img/logo.png" style="width: 250px;"></a>
+                    <a class="navbar-brand" href="#inicio"><img src="img/logo.png" style="width: 250px;"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -165,7 +165,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-6 col-sm-6 bloque_1">
+                        <div class="col-md-6 col-sm-12 bloque_1">
                             <h3>¿Cánto dura el tratamiento?</h3>
                             <p class="espacio">En <span>M&D</span> realizaremos un plan adaptado ti.
                                 Un tratamiento típico dura unos <span>30 minutos y necesitarás aproximadamente 6
@@ -190,7 +190,7 @@
                             </p>
                         </div>
 
-                        <div class="col-md-6 col-sm-6 bloque_1">
+                        <div class="col-md-6 col-sm-12 bloque_1">
                             <h3>¿Cómo se siente?</h3>
                             <p class="espacio">Experimentarás hormigueo y contracciones musculares del suelo pélvico
                                 durante
