--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <link rel="stylesheet" type="text/css" href="estilo.css">
+    
 
     <title>EMSELLA</title>
 </head>
@@ -26,7 +27,7 @@
         </header>
 
         <!-- Menú -->
-<navbar>
+
         <div class="row">
             <div class="col-md-12 col-sm-12">
                 <nav id="navbar">
@@ -68,7 +69,6 @@
             </div>
         </div>
 
-</navbar>
 
 
         <!------------------------------------------------------------------------------------------------------------------------------- Inicio -->
@@ -76,7 +76,7 @@
         <main>
 
             <div class="elemento">
-                <div class="row" data-aos="fade-right" id="inicio">
+                <div data-aos="zoom-in-up" class="row"  id="inicio">
                     <div class="col-md-6 col-sm-12">
                         <h1>¿Qué es EMSELLA?</h1>
                         <h2><span>Disruptivo tratamiento</span> para la incontinencia ahora en <span>Colonia del
@@ -106,7 +106,7 @@
 
                 </div>
 
-                <div data-aos="fade-left" class="row" id="inicio_2">
+                <div  data-aos="zoom-in-up" class="row" id="inicio_2">
 
                     <div class="col-md-6">
                         <img src="img/6.png">
@@ -155,8 +155,8 @@
                 </div>
             </div>
             <div class="row beneficios">
-                <h3>La investigación científica ha demostrado que el 95% de los pacientes tratados
-                    reportaron una mejora significativa en su calidad de vida.</h3>
+                <h3 data-aos="zoom-in">La investigación científica ha demostrado que <span>el 95% de los pacientes</span> tratados
+                    reportaron una <span> mejora significativa en su calidad de vida.</span></h3>
             </div>
  <!------------------------------------------------------------------------------------------------------------------------------- Preguntas -->
 
@@ -168,7 +168,7 @@
                 </div>
 
                 <div class="row">
-                    <div data-aos="fade-right" class="col-md-6 col-sm-12 bloque_1">
+                    <div data-aos="fade-down-right" class="col-md-6 col-sm-12 bloque_1">
                         <h3>¿Cánto dura el tratamiento?</h3>
                         <p class="espacio">En <span>M&D</span> realizaremos un plan adaptado ti.
                             Un tratamiento típico dura unos <span>30 minutos y necesitarás aproximadamente 6
@@ -193,7 +193,7 @@
                         </p>
                     </div>
 
-                    <div data-aos="fade-left" class="col-md-6 col-sm-12 bloque_1">
+                    <div data-aos="fade-up-left" class="col-md-6 col-sm-12 bloque_1">
                         <h3>¿Cómo se siente?</h3>
                         <p class="espacio">Experimentarás hormigueo y contracciones musculares del suelo pélvico
                             durante
