--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <div class="elemento">
                 <div class="row aparece" id="inicio">
-                    <div class="col-md-6 col-sm-12">
+                    <div class="col-md-6 col-sm-12 texto">
                         <h1>¿Qué es EMSELLA?</h1>
                         <h2><span>Disruptivo tratamiento</span> para la incontinencia ahora en <span>Colonia del
                                 Sacramento.</span></h2>
@@ -111,7 +111,7 @@
                     <div class="col-md-6">
                         <img src="img/6.png">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 texto">
                         <h2>¿Cómo funciona?</h2>
                         <p>La silla de <b>Emsella</b> es una <b>solución única para la incontinencia urinaria por su
                                 efectividad.</b>
@@ -236,7 +236,8 @@
                     <div class="row ">
                         <div class="col-md-6">
 
-                            <form action="https://formspree.io/f/catalina.sonora1@gmail.com" method="post">
+                            <form action="https://formspree.io/f/moqrnolz"
+                            method="POST">
 
 
 
