--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
         <header>
-            <img alt="logo Emsella Colonia" src="img/logo.png" id="logo">
+            <img alt="logo Emsella Colonia" src="img/logo.svg" id="logo">
         </header>
 
         <!-- Menú -->
@@ -93,7 +93,7 @@
 
 
                             <div>
-                                <button id="boton" type="button">Agendá tu consulta</button>
+                                <button id="boton" type="button" formtarget="_blank">Agendá tu consulta</button>
                             </div>
 
                         </p>
@@ -109,7 +109,7 @@
                 <div class="row aparece" id="inicio_2">
 
                     <div class="col-md-6">
-                        <img alt="silla EMSELLA"src="img/silla_emsella.png">
+                        <img alt="silla EMSELLA"src="img/BTL_silla.png">
                     </div>
                     <div class="col-md-6 texto">
                         <h2>¿Cómo funciona?</h2>
