--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                             class="fa-brands fa-instagram fa-2xl"></i> </a>
                     <a href="https://wa.me/59892900020" target="_blank"> <i
                             class="fa-brands fa-whatsapp fa-2xl"></i></a>
-                    <a href="mailto:marimiotti@gmail.com?Subject=Consultas"><i class="fa fa-envelope-o fa-2xl"
+                    <a href="mailto:emsellacolonia@gmail.com?Subject=Consultas"><i class="fa fa-envelope-o fa-2xl"
                             aria-hidden="true"></i></a>
 
                 </div>
