--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class=" sticky-top row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuResponsive">
-                    <a class="navbar-brand" href="#inicio"><img alt="logo Emsella Colonia" src="img/logo.png"></a>
+                    <a class="navbar-brand" href="#inicio"><img alt="logo Emsella Colonia" src="img/logo.svg"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -303,7 +303,7 @@
                             class="fa-brands fa-instagram fa-2xl"></i> </a>
                     <a href="https://wa.me/59892900020" target="_blank"> <i
                             class="fa-brands fa-whatsapp fa-2xl"></i></a>
-                    <a href="mailto:emsellacolonia@gmail.com?Subject=Consultas"><i class="fa fa-envelope-o fa-2xl"
+                    <a href="mailto:contacto@emsellacolonia.com.uy?Subject=Consultas"><i class="fa fa-envelope-o fa-2xl"
                             aria-hidden="true"></i></a>
 
                 </div>
