--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="elemento">
                 <div class="row aparece" id="inicio">
                     <div class="col-md-6 col-sm-12 texto">
-                        <h1>¿Quiénes somos?</h1>
+                        <h1>¿Qué es Emsella?</h1>
                         <h2><span>Disruptivo tratamiento</span> para la incontinencia ahora en <span>Colonia del
                                 Sacramento.</span></h2>
                         <p>
