--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="EMSELLA COLONIA">
+    <meta name=”keywords” content= "tratamiento, incontinencia, innovador, Colonia, emsella">
+    <meta name="description" content="Innovador tratamiento para la incontinencia, revoluciona la salud y el bienestar.
+    EMSELLA COLONIA: Nuevo consultorio médico en Colonia del Sacramento. Agendá una consulta con un especialista.">
     <script src="https://kit.fontawesome.com/d6e46616a9.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -139,7 +143,7 @@
 
             <div class="row" id="beneficios">
                 <div class="col-md-12 beneficios">
-                    <h2>BENEFICIOS</h2>
+                    <h1>BENEFICIOS</h1>
                 </div>
             </div>
 
@@ -176,7 +180,7 @@
             <div class="aparece" id="preguntas">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>PREGUNTAS FRECUENTES</h2>
+                        <h1>PREGUNTAS FRECUENTES</h1>
                     </div>
                 </div>
 
