--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="EMSELLA COLONIA">
-    <meta name=”keywords” content= "tratamiento, incontinencia, innovador, Colonia, emsella">
+    <meta name="title" content="Emsella Colonia">
+   
     <meta name="description" content="Innovador tratamiento para la incontinencia, revoluciona la salud y el bienestar.
     EMSELLA COLONIA: Nuevo consultorio médico en Colonia del Sacramento. Agendá una consulta con un especialista.">
     <script src="https://kit.fontawesome.com/d6e46616a9.js" crossorigin="anonymous"></script>
